--- a/app/src/main/res/layout/questoinnaire.xml
+++ b/app/src/main/res/layout/questoinnaire.xml
@@ -215,23 +215,39 @@
                     android:textStyle="bold"
                     app:layout_constraintTop_toBottomOf="@+id/typeSympNotes" />
 
-                <DatePicker
-                    android:id="@+id/simpleDatePicker"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                <TextView
+                    android:id="@+id/datePick"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="8dp"
+                    android:background="@drawable/roundbutton"
+                    android:backgroundTint="@color/colorNeutralWhite"
+                    android:hint="Date"
+                    android:padding="15dp"
+                    android:textColor="#000000"
+                    android:textColorHighlight="#000000"
+                    android:textColorHint="#000000"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/DateTimeView" />
-                <!--android:datePickerMode="spinner"-->
 
-                <TimePicker
-                    android:id="@+id/simpleTimePicker"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-
-                    />
-                <!--android:timePickerMode="spinner"-->
+                <TextView
+                    android:id="@+id/timePick"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/roundbutton"
+                    android:backgroundTint="@color/colorNeutralWhite"
+                    android:hint="Time"
+                    android:padding="15dp"
+                    android:textColor="#000000"
+                    android:textColorHighlight="#000000"
+                    android:textColorHint="#000000"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.5"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/datePick" />
 
                 <Button
                     android:id="@+id/SaveBtn"
