--- a/app/src/main/res/layout/bs_log_entry.xml
+++ b/app/src/main/res/layout/bs_log_entry.xml
@@ -15,32 +15,6 @@
         android:layout_marginStart="16dp"
         android:layout_marginVertical="16dp"
         android:orientation="vertical">
-        
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:orientation="horizontal">
-
-             <TextView
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="Date:    "
-                 android:textSize="26sp"
-                 android:textStyle="bold"
-                 android:textColor="@color/colorNeutralWhite"
-                 android:textAlignment="center" />
-             <TextView
-                 android:id="@+id/dateView"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:text="DATE"
-                 android:textSize="26sp"
-                 android:textStyle="bold"
-                 android:textColor="@color/colorNeutralWhite"
-                 android:textAlignment="center" />
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -50,10 +24,10 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Time:    "
-                android:textSize="26sp"
+                android:text="Date and Time: "
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralWhite"
+                android:textColor="@color/colorNeutralBlack"
                 android:textAlignment="center" />
 
             <TextView
@@ -61,9 +35,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TIME"
-                android:textSize="26sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralWhite"
+                android:textColor="@color/colorNeutralBlack"
                 android:textAlignment="center" />
         </LinearLayout>
 
@@ -76,9 +50,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Blood Sugar: "
-                android:textSize="26sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralWhite"
+                android:textColor="@color/colorNeutralBlack"
                 android:textAlignment="center" />
 
             <TextView
@@ -86,9 +60,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Value"
-                android:textSize="26sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralWhite"
+                android:textColor="@color/colorNeutralBlack"
                 android:textAlignment="center" />
         </LinearLayout>
 
@@ -102,19 +76,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Eaten the last 2h: "
-                android:textSize="26sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralWhite"
+                android:textColor="@color/colorNeutralBlack"
                 android:textAlignment="center" />
 
             <TextView
-                android:id="@+id/eatenBoolView"
+                android:id="@+id/eatBoolView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Boolean"
-                android:textSize="26sp"
+                android:textSize="16sp"
                 android:textStyle="bold"
-                android:textColor="@color/colorNeutralWhite"
+                android:textColor="@color/colorNeutralBlack"
                 android:textAlignment="center" />
         </LinearLayout>
 
