--- a/app/src/main/res/layout/bloodsugar.xml
+++ b/app/src/main/res/layout/bloodsugar.xml
@@ -36,146 +36,155 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.077" />
 
-    <TextView
-        android:id="@+id/SugarView"
-        android:layout_width="270dp"
-        android:layout_height="30dp"
-        android:text="Blood Sugar (mmol/L)"
-        android:textColor="@color/colorNeutralWhite"
-        android:textSize="22dp"
-        android:layout_marginTop="44dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="570dp"
+        android:orientation="vertical"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="48dp"
         app:layout_constraintTop_toBottomOf="@id/LogoView"
-        app:layout_constraintBottom_toTopOf="@+id/SugarField"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/SugarField"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Blood Sugar (mmol/L)"
-        android:inputType="textPersonName"
-        android:padding="15dp"
-        android:textColor="@color/colorTextBlack"
-        android:textColorHighlight="@color/colorTextBlack"
-        android:textColorHint="@color/colorTextBlack"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SugarView"
-         />
-
-    <TextView
-        android:id="@+id/DateTimeView"
-        android:layout_width="270dp"
-        android:layout_height="30dp"
-        android:text="Date and Time"
-        android:textColor="@color/colorNeutralWhite"
-        android:textSize="22dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@id/SugarField"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/datePick"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Date"
-        android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/DateTimeView"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintHorizontal_bias="0.5">
 
-    <TextView
-        android:id="@+id/timePick"
-        android:layout_width="270dp"
-        android:layout_height="50dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="@color/colorNeutralWhite"
-        android:hint="Time"
-        android:padding="15dp"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/datePick"
-        app:layout_constraintVertical_bias="0.139"
-        tools:ignore="MissingConstraints" />
+        <TextView
+            android:id="@+id/SugarView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Blood Sugar (mmol/L)"
+            android:textColor="@color/colorNeutralWhite"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/hourSwitch"
-        android:theme="@style/SwitchCompatStyle"
-        android:checked="false"
-        android:layout_width="249dp"
-        android:layout_height="63dp"
-        android:text="Have you eaten in the last 2 hours?"
-        android:textAlignment="center"
-        android:textColor="@color/colorNeutralWhite"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/cancelBtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/timePick"
-        app:layout_constraintVertical_bias="0.5" />
+        <EditText
+            android:id="@+id/SugarField"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/roundbutton"
+            android:backgroundTint="@color/colorNeutralWhite"
+            android:hint="Blood Sugar (mmol/L)"
+            android:inputType="textPersonName"
+            android:padding="15dp"
+            android:textColor="@color/colorTextBlack"
+            android:textColorHighlight="@color/colorTextBlack"
+            android:textColorHint="@color/colorTextBlack"
+            app:layout_constraintTop_toBottomOf="@id/SugarView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp" />
 
-    <Button
-        android:id="@+id/saveBtn"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_centerHorizontal="true"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="#2DE160"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:text="Save"
-        android:textSize="15dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.88"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.891" />
+        <TextView
+            android:id="@+id/DateTimeView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Date and Time"
+            android:textColor="@color/colorNeutralWhite"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@id/SugarField"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="30dp" />
 
-    <Button
-        android:id="@+id/cancelBtn"
-        android:layout_width="120dp"
-        android:layout_height="40dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="32dp"
-        android:background="@drawable/roundbutton"
-        android:backgroundTint="#FF0909"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-        android:text="Cancel"
-        android:textSize="15dp"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/timePick"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.891" />
+        <TextView
+            android:id="@+id/datePick"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/roundbutton"
+            android:backgroundTint="@color/colorNeutralWhite"
+            android:hint="Date"
+            android:padding="15dp"
+            android:textColor="@color/colorTextBlack"
+            android:textColorHighlight="@color/colorTextBlack"
+            android:textColorHint="@color/colorTextBlack"
+            app:layout_constraintTop_toBottomOf="@id/DateTimeView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp" />
+
+        <TextView
+            android:id="@+id/timePick"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="@drawable/roundbutton"
+            android:backgroundTint="@color/colorNeutralWhite"
+            android:hint="Time"
+            android:padding="15dp"
+            android:textColor="@color/colorTextBlack"
+            android:textColorHighlight="@color/colorTextBlack"
+            android:textColorHint="@color/colorTextBlack"
+            app:layout_constraintTop_toBottomOf="@id/datePick"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="28dp" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/hourSwitch"
+            android:layout_width="273dp"
+            android:layout_height="63dp"
+            android:checked="false"
+            android:text="Have you eaten in \n the last 2 hours?"
+            android:textAlignment="center"
+            android:textColor="@color/colorNeutralWhite"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:theme="@style/SwitchCompatStyle"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@id/timePick"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="30dp"
+            android:layout_marginEnd="30dp" />
+
+        <Button
+            android:id="@+id/saveBtn"
+            android:layout_width="180dp"
+            android:layout_height="50dp"
+            android:background="@drawable/roundbutton"
+            android:backgroundTint="#2DE160"
+            android:text="Save"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/hourSwitch"
+            android:layout_marginStart="70dp"
+            android:layout_marginEnd="70dp"
+            android:layout_marginTop="20dp" />
+
+        <Button
+            android:id="@+id/cancelBtn"
+            android:layout_width="180dp"
+            android:layout_height="50dp"
+            android:background="@drawable/roundbutton"
+            android:backgroundTint="#FF0909"
+            android:text="Cancel"
+            android:textSize="20sp"
+            android:textColor="@color/colorTextBlack"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/saveBtn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="70dp"
+            android:layout_marginEnd="70dp"
+            android:layout_marginTop="20dp" />
+
+    </LinearLayout>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
